# aml-sentinel

./: .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: index.html
src/aml_sentinel/: __init__.py  cli.py  models.py
src/aml_sentinel/api/: __init__.py  app.py  schemas.py  store.py
src/aml_sentinel/api/static/: app.js  index.html  style.css
src/aml_sentinel/detect/: __init__.py  consumer.py  graph.py  poster.py  service.py  typologies.py
src/aml_sentinel/replay/: __init__.py  engine.py  kafka.py  loader.py  timesynth.py
src/aml_sentinel/scoring/: __init__.py  metrics.py
tests/: conftest.py  test_api.py  test_api_live.py  test_detection_e2e.py  test_graph.py  test_loader.py  test_replay.py  test_scoring.py  test_timesynth.py  test_transport.py  test_typologies.py
tests/fixtures/data/accounts/: accounts_0_0.csv
tests/fixtures/data/fraud/: fraud_cases.csv  transactions_fraud.csv
tests/fixtures/data/transactions/: transactions_0_0.csv
